syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "production_line.proto";
import "attribute_expression.proto";

service ProductionProcess{
    rpc Query(QueryProductionProcessRequest)returns(QueryProductionProcessResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetProductionProcessDetailResponse){}
}

message ProductionProcessInfo {
	//ID 
    string id=3;
	//顺序 
 	int32 sortIndex=4;
	//代号 
 	string code=5;
	//描述 
 	string description=6;
	//识别码 
 	string identifier=7;
	//是否启用 
 	bool enable=8;
	//默认匹配 
 	bool initialValue=9;
	//是否报工 
 	bool enableReport=10;
	//是否管控 
 	bool enableControl=11;
	//工序类型 
 	int32 processType=13;
	//载具类型 
 	int32 vehicleType=14;
	//产品状态 
 	string productState=15;
	//备注 
 	string remark=16;
	//生产产线ID 
    string productionLineID=17;
	ProductionLineInfo productionLine=18;
	//支持工站
	repeated string availableStationIDs=19;
	repeated ProductionProcessAvailableStationInfo productionProcessAvailableStations=22;
	//特性表达式
	repeated AttributeExpressionInfo attributeExpressions=21;
}

message ProductionProcessAvailableStationInfo{
    string id=4;
	string productionProcessID=1;
	string productionStationID=2;
	ProductionStationInfo productionStation=3;
}

message QueryProductionProcessRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//生产产线ID 
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=4;
	// @inject_tag: uri:"productionStationID" form:"productionStationID"
	string productionStationID=5;
	// @inject_tag: uri:"code" form:"code"
	string code=6;
}

message QueryProductionProcessResponse{
    Code code=1;
    string message=2;
    repeated ProductionProcessInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductionProcessResponse{
    Code code=1;
    string message=2;
    repeated ProductionProcessInfo data=3;
}

message GetProductionProcessDetailResponse{
    Code code=1;
    string message=2;
    ProductionProcessInfo data=3;
}